task/S20-950 (#45)
S20-950, 
1. CI job was reorganized to follow for unified style
2. dependencies where updated
3. linters warnings fixes
4. etcd endpoints are passed as part of config to plugins
